--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1095,7 +1095,8 @@ margin-bottom: 16px;
 
  .sp_image {
      width: 100%;
-    background: linear-gradient(0deg, #D9D9D9 0%, #D9D9D9 100%), linear-gradient(183deg, rgba(198.93, 198.93, 198.93, 0.30) 0%, rgba(0, 0, 0, 0.60) 100%)
+     object-fit: cover;
+     max-height: 214.65px;
  }
  .all_services{
     display: none;
