--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -264,6 +264,7 @@ margin-bottom: 6px;
     line-height: 26px;
     cursor: pointer;
     margin-top: 4px;
+    border-bottom: 2px solid black;
 }
 .menu_item__text {
     font-size: 18px;
@@ -293,7 +294,7 @@ margin-bottom: 6px;
 .hero_title{
     text-align: center;
         color: white;
-            font-size: 32px;
+            font-size: 30px;
             font-family: 'Figtree';
             font-weight: 700;
             line-height: 32px;
@@ -302,7 +303,7 @@ margin-bottom: 6px;
 .hero_btn{
     padding: 20px 40px;
     font-family: Figtree;
-        font-size: 20px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 500;
         line-height: 32px;
@@ -526,6 +527,12 @@ line-height: 32px;
         transform: translate(-50%, 200%);
         display: flex;
         gap: 44px;
+        width: 100%;
+        background: rgba(93.49, 93.49, 93.49, 0.50);
+        justify-content: flex-end;
+        padding-right: 200px;
+        padding-top: 50px;
+        padding-bottom: 50px;
 }
 
 .value_item__description{
@@ -573,7 +580,7 @@ color: white;
     word-wrap: break-word;
     text-align: center;
 margin-top: 12px;
-padding: 0px 270px;
+padding: 0px 300px;
 }
 #certificates{
     margin-top: 152px;
@@ -958,6 +965,7 @@ margin-bottom: 16px;
     width: 100%;
     margin-top:80px;
     object-fit: cover;
+    height: 800px;
 }
 /*END CERTIFICATE PAGE */
 .contact_item__header{
@@ -1175,6 +1183,7 @@ margin-bottom: 16px;
     .supplier_img{
         width: 105px;
         height: 53px;
+        object-fit: contain;
     }
     
     .certificatepage_img__middle{
@@ -1189,9 +1198,12 @@ margin-bottom: 16px;
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, 250%);
+            transform: translate(-50%, 190%);
             display: flex;
             gap: 8px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 30px;
         }
     .business_item__subtitle {
             color: #FF6835;
@@ -1429,7 +1441,7 @@ margin-bottom: 16px;
         text-align: center;
 text-shadow: 2px 5px 14px rgba(161, 161, 161, 0.35);
 font-family: 'Figtree';
-font-size: 17px;
+font-size: 15px;
 font-style: normal;
 font-weight: 700;
 line-height: 24px;
@@ -1437,7 +1449,7 @@ margin-top: 20px;
     }
     .hero_btn{
         font-family: 'Figtree';
-font-size: 14px;
+font-size: 12px;
 font-style: normal;
 font-weight: 500;
 line-height: 26px;
@@ -1774,9 +1786,9 @@ line-height: 20px;
             display: flex;
             justify-content: center;
             margin: 0px 220px;
-            background: rgba(93.49, 93.49, 93.49, 0.50);
+            /* background: rgba(93.49, 93.49, 93.49, 0.50); */
             border-radius: 12px;
-            border: 1px #6E6A74 solid;
+            /* border: 1px #6E6A74 solid; */
             padding: 10px 60px;
             /* background-color: #000; */
             /* border-radius: 24px; */
