--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1662,6 +1662,7 @@ line-height: 20px;
         border-right: 1px solid #fff;
         width: 100px;
         height: 100px;
+        object-fit: contain;
     }
     .certificate_img:last-child {
         border-right: none;
