--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -609,7 +609,7 @@ width: 100%;
 }
 .certificate_wrapper{
     display: flex;
-        gap: 20px;
+        gap: 30px;
     /* position: absolute;
     bottom: 0%;
     padding: 40px 156px; */
@@ -1123,9 +1123,12 @@ margin-bottom: 16px;
 
 @media screen and (max-width: 576px) {
     .certificate_wrapper{
-        gap: 12px;
+        gap: 10px;
     }
 
+}
+.certificate_img{
+    object-fit: contain;
 }
 @media screen and (max-width: 992px) {
     .service_page__subtitle{
@@ -1659,7 +1662,7 @@ line-height: 20px;
     }
     .certificate_img{
         padding: 0px 8.5px;
-        border-right: 1px solid #fff;
+        /* border-right: 1px solid #fff; */
         width: 100px;
         height: 100px;
         object-fit: contain;
@@ -1699,7 +1702,7 @@ line-height: 20px;
         position: relative
     }
     #footer{
-        margin-top:80px
+        padding-top:80px
     }
     .value_wrapper{
         margin-top:24px
@@ -1724,10 +1727,11 @@ line-height: 20px;
             display: flex;
             justify-content: center;
             margin: 0px !important;
-            background: none !important;
+            /* background: none !important; */
             border-radius: 0!important;
             border: none !important;
-            padding: 0px !important
+            padding: 0px !important;
+            background: rgba(237, 236, 238, 0.60);
             /* background-color: #000; */
             /* border-radius: 24px; */
         }
@@ -1786,8 +1790,8 @@ line-height: 20px;
         .certificate_item__wrapper {
             display: flex;
             justify-content: center;
-            margin: 0px 220px;
-            /* background: rgba(93.49, 93.49, 93.49, 0.50); */
+            /* margin: 0px 220px; */
+            background: rgba(237, 236, 238, 0.60);
             border-radius: 12px;
             /* border: 1px #6E6A74 solid; */
             padding: 10px 60px;
