--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -378,16 +378,20 @@ color: #444444;
 .service_wrapper{
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    height:100%;
+    justify-content:space-between;
+    /*gap: 24px;*/
     margin-top: 40px;
 }
-.service_name{
+
+.service_name {
     /* text-align: center; */
     color: #0F0E10;
-        font-size: 24px;
-        font-family: 'Figtree';
-        font-weight: 600;
-        line-height: 30px;
+    font-size: 24px;
+    font-family: 'Figtree';
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
 }
 .service_description{
     color: #1E1C20;
@@ -781,6 +785,7 @@ margin-bottom: 16px;
         border-radius: 4px;
         padding: 12px;
         height: 44px;
+        margin-bottom:4px;
 }
 .contact_input:focus{
     outline: none;
@@ -872,6 +877,7 @@ margin-bottom: 16px;
     .checkbox_wrapper{
         display: flex;
         gap: 30px;
+        margin-bottom:4px;
     }
     .send_btn{
         color: white;
@@ -1126,11 +1132,17 @@ margin-bottom: 16px;
         gap: 10px;
     }
 
+    .navbar_mobile__logo {
+        padding-left: 30px;
+    } 
 }
 .certificate_img{
     object-fit: contain;
 }
 @media screen and (max-width: 992px) {
+    .card_min__height {
+        min-height: 0px;
+    }
     .service_page__subtitle{
         color: #4A4551;
             font-size: 14px !important;
@@ -1174,9 +1186,7 @@ margin-bottom: 16px;
         width: 62px;
         height: 62px;
     }
-    .mySwiper2{
-        display: none;
-    }
+   
     .suppliers_mobile{
         display: flex;
         flex-direction: column;
@@ -1513,6 +1523,7 @@ margin-top:12px
     .service_img{
         /* width:336px;
         height:200px */
+        min-height:295px;
     }
     .service_name{
         font-family: 'Figtree';
@@ -1520,6 +1531,7 @@ font-size: 20px;
 font-style: normal;
 font-weight: 600;
 line-height: 30px;
+margin-top:24px
     }
     .service_description{
         font-family: 'Roboto';
@@ -1740,76 +1752,124 @@ line-height: 20px;
         }
       
   }
-        @media screen and (min-width: 1200px) and (max-width: 1390px) {
-            .certificate_item__wrapper{
-                display: none !important;
-            }
-        }
-  @media screen and (min-width: 993px) and (max-width: 1200px) {
-   
-    .certificates_header__subtitle{
-        padding: 0px !important;
+@media screen and (min-width: 1200px) {
+    .swiper2_img {
+        height: 110px !important;
     }
-    .navbar{
-        padding-left: 0px;
+    .business_min-height{
+        min-height:309px
     }
-    .supplier_img{
-        height:100px
+}
+@media screen and (min-width: 1400px) {
+    .business_min-height{
+        min-height:250px !important
     }
-    .video_box{
-        display: none !important;
-    }
-    .about_wrapper{
-        width: 100%;
-    }
-    .certificates_header_wrapper{
-        margin-top: 150px;
-    }
-    .certificates_header_wrapper{
-        margin-top: 0px;
-    }
-    .certificate_btn{
-        margin-top: -3px;
-        padding: 8px 40px
-    }
-    .certificate_item__wrapper{
-        display: none !important;
-    }
-  }
-  @media screen and (min-width: 777px) and (max-width: 993px) {
-    
-    .certificates_header__title{
-        margin-top: 200px !important;
-    }
-    .certificates_header__subtitle{
-        padding: 0px 100px !important;
-    }
-  }
 
+    .business_min-height {
+        min-height: 300px
+    }
+}
+    @media screen and (min-width: 1200px) and (max-width: 1400px) {
+        .value_wrapper {
+            min-height: 161px;
+        }
+    }
+
+    @media screen and (min-width: 1545px) {
+        .value_wrapper {
+            min-height: 106px;
+        }
+    }
+@media screen and (min-width:993px) and (max-width:1200px) {
+    .business_min-height{
+        min-height:400px
+    }
+}
+
+    @media screen and (min-width: 1200px) and (max-width: 1390px) {
+        .certificate_item__wrapper {
+            display: none !important;
+        }
+    }
+
+    @media screen and (min-width: 993px) and (max-width: 1200px) {
+        .value_wrapper {
+            min-height: 233px;
+        }
+
+        .certificates_header__subtitle {
+            padding: 0px !important;
+        }
+
+        .navbar {
+            padding-left: 0px;
+        }
+
+        .supplier_img {
+            height: 100px
+        }
+
+        .video_box {
+            display: none !important;
+        }
+
+        .about_wrapper {
+            width: 100%;
+        }
+
+        .certificates_header_wrapper {
+            margin-top: 150px;
+        }
+
+        .certificates_header_wrapper {
+            margin-top: 0px;
+        }
+
+        .certificate_btn {
+            margin-top: -3px;
+            padding: 8px 40px
+        }
 
         .certificate_item__wrapper {
-            display: flex;
-            justify-content: center;
-            /* margin: 0px 220px; */
-            background: rgba(237, 236, 238, 0.60);
-            border-radius: 12px;
-            /* border: 1px #6E6A74 solid; */
-            padding: 10px 60px;
-            /* background-color: #000; */
-            /* border-radius: 24px; */
+            display: none !important;
         }
-        .certificate_section__wrapper{
-        display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin-top: 24px;
+    }
+
+    @media screen and (min-width: 777px) and (max-width: 993px) {
+
+        .certificates_header__title {
+            margin-top: 200px !important;
         }
 
-                @media screen and (min-width: 577px) and (max-width: 768px) {
-                    .certificate_section__wrapper{
-                        margin-top:200px !important
-                    }
-        
-                }
+        .certificates_header__subtitle {
+            padding: 0px 100px !important;
+        }
+    }
+
+
+    .certificate_item__wrapper {
+        display: flex;
+        justify-content: center;
+        /* margin: 0px 220px; */
+        background: rgba(237, 236, 238, 0.60);
+        border-radius: 12px;
+        /* border: 1px #6E6A74 solid; */
+        padding: 10px 60px;
+        /* background-color: #000; */
+        /* border-radius: 24px; */
+    }
+
+    .certificate_section__wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 24px;
+    }
+
+    @media screen and (min-width: 577px) and (max-width: 768px) {
+        .certificate_section__wrapper {
+            margin-top: 200px !important
+        }
+    }
                 
